Correct request parameter API validation. (#216)
